@@ -752,18 +752,18 @@ void GetMcdBlockInfo(int mcd, int block, McdBlock *Info) {
 }
 
 int sioFreeze(gzFile f, int Mode) {
-	gzfreezel(buf);
-	gzfreezel(&StatReg);
-	gzfreezel(&ModeReg);
-	gzfreezel(&CtrlReg);
-	gzfreezel(&BaudReg);
-	gzfreezel(&bufcount);
-	gzfreezel(&parp);
-	gzfreezel(&mcdst);
-	gzfreezel(&rdwr);
-	gzfreezel(&adrH);
-	gzfreezel(&adrL);
-	gzfreezel(&padst);
+	gzfreeze(buf, sizeof(buf));
+	gzfreeze(&StatReg, sizeof(StatReg));
+	gzfreeze(&ModeReg, sizeof(ModeReg));
+	gzfreeze(&CtrlReg, sizeof(CtrlReg));
+	gzfreeze(&BaudReg, sizeof(BaudReg));
+	gzfreeze(&bufcount, sizeof(bufcount));
+	gzfreeze(&parp, sizeof(parp));
+	gzfreeze(&mcdst, sizeof(mcdst));
+	gzfreeze(&rdwr, sizeof(rdwr));
+	gzfreeze(&adrH, sizeof(adrH));
+	gzfreeze(&adrL, sizeof(adrL));
+	gzfreeze(&padst, sizeof(padst));
 
 	return 0;
 }
